--- a/test-harness.html
+++ b/test-harness.html
@@ -55,10 +55,10 @@ iframe {
   height: 600px;
 }
 </style>
-<button id=prev-button onclick="updateState(-1)">Prev</button>
-<button id=reload-button onclick="updateState()">Reload</button>
-<button id=next-button onclick="updateState(1)">Next</button><br>
-<span id=test-num></span><a id=test-name></a><br>
+<button id="prev-button" onclick="updateState(-1)">Prev</button>
+<button id="reload-button" onclick="updateState()">Reload</button>
+<button id="next-button" onclick="updateState(1)">Next</button><br>
+<span id="test-num"></span><a id="test-name"></a><br>
 <iframe></iframe>
 <script>
 var currentTest = 0;
@@ -72,12 +72,14 @@ function updateState(change) {
   }
   var test = tests[currentTest];
   window.location.hash = test;
-  document.querySelector('#test-num').innerText = (currentTest + 1) + ' of ' + tests.length + ': ';
+  document.querySelector('#test-num').innerText =
+      (currentTest + 1) + ' of ' + tests.length + ': ';
   document.querySelector('#test-name').innerText = test;
   document.querySelector('#test-name').href = test;
   document.querySelector('iframe').src = test;
   document.querySelector('#prev-button').disabled = currentTest <= 0;
-  document.querySelector('#next-button').disabled = currentTest >= tests.length - 1;
+  document.querySelector('#next-button').disabled =
+      currentTest >= tests.length - 1;
 }
 
 updateState();
