--- a/test-iterations-fill.html
+++ b/test-iterations-fill.html
@@ -109,19 +109,37 @@ var groups = [];
 
 for (var i = 0; i < directions.length; i++) {
   var dir = directions[i];
-  var group = new ParGroup([], {startDelay: 1, duration: 8, iterationCount: 3, playbackRate: 2, direction: dir}, undefined, 1);
+  var group = new ParGroup([], {
+    startDelay: 1,
+    duration: 8,
+    iterationCount: 3,
+    playbackRate: 2,
+    direction: dir
+  }, undefined, 1);
   groups.push(group);
 }
 
 function sampleFunc(timeFraction, iteration, target) {
-  target.innerHTML = Math.floor(timeFraction * 1000) / 1000 + " : " + iteration
+  target.innerHTML = Math.floor(timeFraction * 1000) / 1000 + " : " + iteration;
 }
 
 for (var i = 0; i < fillModes.length; i++) {
   var divs = document.querySelectorAll(categories[i]);
   for (var j = 0; j < divs.length; j++) {
-    new Animation(divs[j], {left: ["100px", "200px"]}, {startDelay: 1, duration: 1, iterationCount: 2, fillMode: fillModes[i], playbackRate: 0.8}, groups[j], 1);
-    new Animation(divs[j], {sample: sampleFunc}, {startDelay: 1, duration: 1, iterationCount: 2, fillMode: fillModes[i], playbackRate: 0.8}, groups[j], 1);
-	}
+    new Animation(divs[j], {left: ["100px", "200px"]}, {
+      startDelay: 1,
+      duration: 1,
+      iterationCount: 2,
+      fillMode: fillModes[i],
+      playbackRate: 0.8
+    }, groups[j], 1);
+    new Animation(divs[j], {sample: sampleFunc}, {
+      startDelay: 1,
+      duration: 1,
+      iterationCount: 2,
+      fillMode: fillModes[i],
+      playbackRate: 0.8
+    }, groups[j], 1);
+  }
 }
 </script>
