--- a/test-svg-anim.html
+++ b/test-svg-anim.html
@@ -25,8 +25,9 @@ limitations under the License.
 }
 </style>
 <svg>
-	<rect class="expectation" x="400px" y="10px" width="100px" height="100px"></rect>
-	<rect class="anim" x="100px" y="10px" width="100px" height="100px"></rect>
+  <rect class="expectation" x="400px" y="10px" width="100px" height="100px">
+  <rect>
+  <rect class="anim" x="100px" y="10px" width="100px" height="100px"></rect>
 </svg>
 <script src="web-animation.js"></script>
 <script>
