--- a/test-fill-values.html
+++ b/test-fill-values.html
@@ -30,7 +30,7 @@ limitations under the License.
   position: relative;
 }
 
-.expected {
+.exp {
   border-right: 1px solid black;
 }
 
@@ -56,47 +56,47 @@ limitations under the License.
 <div>Right edge of each box should align with black line at end of test.</div>
 
 <div class="animContainer" id="ca">
-  <div style="width: 300px;" class="expected"><div id="a" class="anim"></div></div>
-  <div style="width: 300px;" class="expected"><div id="b" class="anim"></div></div>
-  <div style="width: 300px;" class="expected"><div id="c" class="anim"></div></div>
-  <div style="width: 300px;" class="expected"><div id="d" class="anim"></div></div>
-  <div style="width: 500px;" class="expected"><div id="e" class="anim"></div></div>
-  <div style="width: 500px;" class="expected"><div id="f" class="anim"></div></div>
-  <div style="width: 500px;" class="expected"><div id="g" class="anim"></div></div>
-  <div style="width: 500px;" class="expected"><div id="h" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="a" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="b" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="c" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="d" class="anim"></div></div>
+  <div style="width: 500px;" class="exp"><div id="e" class="anim"></div></div>
+  <div style="width: 500px;" class="exp"><div id="f" class="anim"></div></div>
+  <div style="width: 500px;" class="exp"><div id="g" class="anim"></div></div>
+  <div style="width: 500px;" class="exp"><div id="h" class="anim"></div></div>
 </div>
 
 <div class="animContainer" id="cb">
-  <div style="width: 300px;" class="expected"><div id="a" class="anim"></div></div>
-  <div style="width: 300px;" class="expected"><div id="b" class="anim"></div></div>
-  <div style="width: 300px;" class="expected"><div id="c" class="anim"></div></div>
-  <div style="width: 300px;" class="expected"><div id="d" class="anim"></div></div>
-  <div style="width: 400px;" class="expected"><div id="e" class="anim"></div></div>
-  <div style="width: 400px;" class="expected"><div id="f" class="anim"></div></div>
-  <div style="width: 400px;" class="expected"><div id="g" class="anim"></div></div>
-  <div style="width: 400px;" class="expected"><div id="h" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="a" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="b" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="c" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="d" class="anim"></div></div>
+  <div style="width: 400px;" class="exp"><div id="e" class="anim"></div></div>
+  <div style="width: 400px;" class="exp"><div id="f" class="anim"></div></div>
+  <div style="width: 400px;" class="exp"><div id="g" class="anim"></div></div>
+  <div style="width: 400px;" class="exp"><div id="h" class="anim"></div></div>
 </div>
 
 <div class="animContainer" id="cc">
-  <div style="width: 300px;" class="expected"><div id="a" class="anim"></div></div>
-  <div style="width: 300px;" class="expected"><div id="b" class="anim"></div></div>
-  <div style="width: 300px;" class="expected"><div id="c" class="anim"></div></div>
-  <div style="width: 300px;" class="expected"><div id="d" class="anim"></div></div>
-  <div style="width: 400px;" class="expected"><div id="e" class="anim"></div></div>
-  <div style="width: 400px;" class="expected"><div id="f" class="anim"></div></div>
-  <div style="width: 400px;" class="expected"><div id="g" class="anim"></div></div>
-  <div style="width: 400px;" class="expected"><div id="h" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="a" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="b" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="c" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="d" class="anim"></div></div>
+  <div style="width: 400px;" class="exp"><div id="e" class="anim"></div></div>
+  <div style="width: 400px;" class="exp"><div id="f" class="anim"></div></div>
+  <div style="width: 400px;" class="exp"><div id="g" class="anim"></div></div>
+  <div style="width: 400px;" class="exp"><div id="h" class="anim"></div></div>
 </div>
 
 <div class="animContainer" id="cd">
-  <div style="width: 300px;" class="expected"><div id="a" class="anim"></div></div>
-  <div style="width: 300px;" class="expected"><div id="b" class="anim"></div></div>
-  <div style="width: 300px;" class="expected"><div id="c" class="anim"></div></div>
-  <div style="width: 300px;" class="expected"><div id="d" class="anim"></div></div>
-  <div style="width: 500px;" class="expected"><div id="e" class="anim"></div></div>
-  <div style="width: 500px;" class="expected"><div id="f" class="anim"></div></div>
-  <div style="width: 500px;" class="expected"><div id="g" class="anim"></div></div>
-  <div style="width: 500px;" class="expected"><div id="h" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="a" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="b" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="c" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="d" class="anim"></div></div>
+  <div style="width: 500px;" class="exp"><div id="e" class="anim"></div></div>
+  <div style="width: 500px;" class="exp"><div id="f" class="anim"></div></div>
+  <div style="width: 500px;" class="exp"><div id="g" class="anim"></div></div>
+  <div style="width: 500px;" class="exp"><div id="h" class="anim"></div></div>
 </div>
 
 <script src="web-animation.js"></script>
@@ -107,12 +107,25 @@ var directions = ["normal", "reverse", "alternate", "alternate-reverse"];
 var fills = ["none", "backwards", "forwards", "both"];
 
 for (var i = 0; i < containers.length; i++) {
-  var divs = document.getElementById(containers[i]).getElementsByClassName('anim');
+  var divs =
+      document.getElementById(containers[i]).getElementsByClassName('anim');
   for (var j = 0; j < fills.length; j++) {
-    new Animation(divs[2 * j], {left: ["100px", "200px"]}, {iterationCount: 4, direction: directions[i], duration: 1, fillMode: fills[j]}, undefined, 1);
-    divs[2 * j].innerHTML = "dir: " + directions[i] + " fill: " + fills[j] + " dur: 1";
-    new Animation(divs[2 * j + 1], {left: ["100px", "200px"]}, {iterationCount: 4, direction: directions[i], duration: 0, fillMode: fills[j]}, undefined, 1);
-    divs[2 * j + 1].innerHTML = "dir: " + directions[i] + " fill: " + fills[j] + " dur: 0";
+    new Animation(divs[2 * j], {left: ["100px", "200px"]}, {
+      iterationCount: 4,
+      direction: directions[i],
+      duration: 1,
+      fillMode: fills[j]
+    }, undefined, 1);
+    divs[2 * j].innerHTML = "dir: " + directions[i] + " fill: " + fills[j] +
+        " dur: 1";
+    new Animation(divs[2 * j + 1], {left: ["100px", "200px"]}, {
+      iterationCount: 4,
+      direction: directions[i],
+      duration: 0,
+      fillMode: fills[j]
+    }, undefined, 1);
+    divs[2 * j + 1].innerHTML = "dir: " + directions[i] + " fill: " + fills[j] +
+        " dur: 0";
   }
 }
 
