--- a/test-parent.html
+++ b/test-parent.html
@@ -17,25 +17,25 @@ limitations under the License.
 <!DOCTYPE html>
 <style>
 .anim {
-	left: 0px;
-	width: 100px;
-	height: 25px;
-	background-color: #FAA;
-	position: relative;
+  left: 0px;
+  width: 100px;
+  height: 25px;
+  background-color: #FAA;
+  position: relative;
 }
-.expected {
-	border-right: 1px solid black;
+.expect {
+  border-right: 1px solid black;
 }
 
 </style>
 
 <div>Right edge of each box should align with black line at end of test.</div>
-<div style="width: 300px;" class="expected"><div id="a" class="anim"></div></div>
-<div style="width: 300px;" class="expected"><div id="b" class="anim"></div></div>
-<div style="width: 100px;" class="expected"><div id="c" class="anim"></div></div>
-<div style="width: 300px;" class="expected"><div id="d" class="anim"></div></div>
-<div style="width: 300px;" class="expected"><div id="e" class="anim"></div></div>
-<div style="width: 100px;" class="expected"><div id="f" class="anim"></div></div>
+<div style="width: 300px;" class="expect"><div id="a" class="anim"></div></div>
+<div style="width: 300px;" class="expect"><div id="b" class="anim"></div></div>
+<div style="width: 100px;" class="expect"><div id="c" class="anim"></div></div>
+<div style="width: 300px;" class="expect"><div id="d" class="anim"></div></div>
+<div style="width: 300px;" class="expect"><div id="e" class="anim"></div></div>
+<div style="width: 100px;" class="expect"><div id="f" class="anim"></div></div>
 
 <script src="web-animation.js"></script>
 <script>
@@ -49,11 +49,10 @@ new Animation(document.getElementById("b"), {left: ["100px", "200px"]}, 1.0,
 new Animation(document.getElementById("c"), {left: ["100px", "200px"]}, 1.0,
               null);
 
-// Animationation in group with default parent. Should use default group.
+// Animation in group with default parent. Should use default group.
 new Animation(document.getElementById("d"), {left: ["100px", "200px"]}, 1.0,
               new ParGroup([], {iterationCount: 3}));
-// Animationation in group with explicit default parent. Should use default
-// group.
+// Animation in group with explicit default parent. Should use default group.
 new Animation(document.getElementById("e"), {left: ["100px", "200px"]}, 1.0,
               new ParGroup([], {iterationCount: 3}, undefined));
 // Animationation in group with explicit no parent. Should use no group.
