--- a/test-to-animation.html
+++ b/test-to-animation.html
@@ -17,38 +17,38 @@ limitations under the License.
 <!DOCTYPE html>
 <style>
 .anim {
-	left: 0px;
-	width: 100px;
-	height: 100px;
-	background-color: lightsteelblue;
-	position: absolute;
+  left: 0px;
+  width: 100px;
+  height: 100px;
+  background-color: lightsteelblue;
+  position: absolute;
 }
 
 #a {
-	top: 0px;
-	left: 200px;
+  top: 0px;
+  left: 200px;
 }
 
 #b {
-	top: 100px;
-	left: 100px;
+  top: 100px;
+  left: 100px;
 }
 
 #c {
-	top: 200px;
-	left: 0px;
+  top: 200px;
+  left: 0px;
 }
 
 #d {
-	top: 300px;
-	left: 200px;
+  top: 300px;
+  left: 200px;
 }
 
 .expectation {
-	background-color: red;
-	position: absolute;
-	width: 100px;
-	height: 100px;
+  background-color: red;
+  position: absolute;
+  width: 100px;
+  height: 100px;
 }
 
 </style>
@@ -59,10 +59,10 @@ limitations under the License.
 <div class="expectation" style="top: 300px; left: 400px;"></div>
 
 <div>
-	<div id="a" class="anim"></div>
-	<div id="b" class="anim"></div>
-	<div id="c" class="anim"></div>
-	<div id="d" class="anim"></div>
+  <div id="a" class="anim"></div>
+  <div id="b" class="anim"></div>
+  <div id="c" class="anim"></div>
+  <div id="d" class="anim"></div>
 </div>
 
 <script src="web-animation.js"></script>
@@ -73,7 +73,7 @@ var divs = document.querySelectorAll(".anim");
 var group = new ParGroup([], 2, undefined, 1);
 
 for (var i = 0; i < divs.length; i++) {
-	var anim = new Animation(divs[i], {left: (100 * (i+1)) + "px"}, 2, group);
+  new Animation(divs[i], {left: (100 * (i+1)) + "px"}, 2, group);
 }
 
 </script>
