--- a/web-animation-test.html
+++ b/web-animation-test.html
@@ -20,36 +20,36 @@ limitations under the License.
 
 <style>
 .anim {
-	top: 0px;
-	left: 0px;
-	width: 100px;
-	height: 100px;
-	background-color: #FAA;
-	position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100px;
+  height: 100px;
+  background-color: #FAA;
+  position: absolute;
 }
 
 .red {
-	background-color: red;
+  background-color: red;
 }
 
 .green {
-	background-color: green;
+  background-color: green;
 }
 
 .blue {
-	background-color: blue;
+  background-color: blue;
 }
 
 #a {
-	top: 100px;
+  top: 100px;
 }
 
 #b {
-	top: 200px;
+  top: 200px;
 }
 
 #c {
-	top: 300px;
+  top: 300px;
 }
 
 </style>
@@ -57,17 +57,17 @@ limitations under the License.
 </div>
 
 <div>
-	<div id="a" class="anim"></div>
-	<div id="b" class="anim"></div>
+  <div id="a" class="anim"></div>
+  <div id="b" class="anim"></div>
 </div>
 <div>
-	<div id="c" class="anim"></div>
+  <div id="c" class="anim"></div>
 </div>
 
 <div class="group">
-	<div class="anim top red"></div>
-	<div class="anim right green"></div>
-	<div class="anim down blue"></div>
+  <div class="anim top red"></div>
+  <div class="anim right green"></div>
+  <div class="anim down blue"></div>
 </div>
 
 
@@ -75,20 +75,23 @@ limitations under the License.
 <script src="web-animation.js"></script>
 <script>
 
-var anim = new Anim(document.querySelector(".anim"), {left: ["100px", "200px"]}, {startDelay: 2, duration: 4}, undefined, 1);
+new Anim(document.querySelector(".anim"), {left: ["100px", "200px"]},
+    {startDelay: 2, duration: 4}, undefined, 1);
 
 
 var up = new AnimTemplate({top: ["200px", "0px"]}, 1, "selector: .top");
-var right = new AnimTemplate({"left": ["0px", "200px"]}, {startDelay: 0.5, duration: 1}, "selector: .right");
-var down = new AnimTemplate({top: ["0px", "200px"]}, {startDelay: 1, duration: 1}, "selector: .down");
+var right = new AnimTemplate({"left": ["0px", "200px"]},
+    {startDelay: 0.5, duration: 1}, "selector: .right");
+var down = new AnimTemplate({top: ["0px", "200px"]},
+    {startDelay: 1, duration: 1}, "selector: .down");
 
 var group = new ParAnimGroupTemplate([up, right, down]);
 group.animate(document.querySelector(".group"), 0);
 
 var group = new SeqAnimGroupTemplate([
-	new AnimTemplate({left: ["100px", "150px"]}, 1, "target: a"),
-	new AnimTemplate({left: ["100px", "150px"]}, 1, "target: b"),
-	new AnimTemplate({left: ["100px", "150px"]}, 1, "target: c")
+  new AnimTemplate({left: ["100px", "150px"]}, 1, "target: a"),
+  new AnimTemplate({left: ["100px", "150px"]}, 1, "target: b"),
+  new AnimTemplate({left: ["100px", "150px"]}, 1, "target: c")
 ]);
 
 group.animate([[]], 0); // TODO fix this so that 0 children can be passed here.
